Always cache image for USDC token.